minikube/auth-service-minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-deployment
  template:
    metadata:
      labels:
        app: auth-service-deployment
    spec:
      containers:
        - name: auth-service-container
          image: auth-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8443
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8443
            initialDelaySeconds: 5
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: auth-idp-service
spec:
  selector:
    app: auth-service-deployment
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
  type: ClusterIP
