minikube/kafka-minikube.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafka
spec:
  type: ExternalName
  externalName: host.minikube.internal
