minikube/mongo-minikube.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo
spec:
  type: ExternalName
  externalName: host.minikube.internal
