minikube/payment-service-minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service-container
          image: payment-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
