minikube/posgres-minikube.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  type: ExternalName
  externalName: host.minikube.internal
